# Python_WEB_6

./: Home_work.db  pyproject.toml  seeds.py
DBeaver/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_D1.sql  query_D2.sql  quury_4.sql
