[tool.poetry]
name = "python-web-6"
version = "0.1.0"
description = ""
authors = ["RuslanStoliar <111749578+RuslanStoliar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_web_6"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
